--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Test</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="/style.css">
+		<link rel="stylesheet" href="./style.css">
 	</head>
     <body>
 		<div class="wrapper">
@@ -22,6 +22,6 @@
 				<div class="result"></div>
 			</div>
 		</div>
-        <script src="/script.js"></script>
+        <script src="./script.js"></script>
     </body>
 </html>
